Revert "Merge pull request #105 from MariusNMU/fullstack/site-hours-admin-members"
This reverts commit bcdd1c534ee8d00b97960f3f2d6b4fb905a1375d, reversing
changes made to 12fbdcfe991d0b9421c5f9d2f33b97e5b8aa67a2.